
NEW DEPENDENCIES
* poppr now imports elements from dplyr and shiny

NEW SUGGESTS
* poppr now suggests the cowplot, poweRlaw, and polysat packages.

NEW FEATURES
* The default plot for the index of association will now be a single histogram. The user has the option to visualize the standardized index of association (`index = "rbarD"`, default) or the classic index of association (`index = "Ia"`). If the user uses the function `ia` with the argument `valuereturn = TRUE`, then the resulting object can be plotted with the plot function. 
* The function `poppr` will now plot all populations in a single faceted plot instead of one plot per population.
* `aboot` and `bruvo.boot` will now be able to utilize any function to generate trees (suggested in issue #18).
* The mlg slot in the genclone object can now optionally hold an MLG class object. This object will contain different definitions of multilocus genotypes, allowing the user to switch between observed, custom, and mlgs defined given a genetic distance threshold.
* minimum spanning network functions gain the ability to include reticulations using the option `include.ties`
* minimum spanning network functions gain the ability to collapse multilocus genotypes by genetic distance with the option `threshold`.
* `informloci` gains the argument "MAF", which allows the specification of a minor allele frequency cutoff in addition to the cutoff argument. Examples have been updated.
* `aboot` can now take genlight objects.
* `poppr.msn` and `plot_poppr_msn` can now take genlight objects.
* `plot_poppr_msn` now gives users the option to exclude the legends.
* Default plotting for `mlg.table` will no longer produce one plot per population. It will now produce a single ggplot object for all populations. Note that the bars are no longer colored by count.
* `poppr` will no longer calculate "Hexp". Instead, Simpson's index will be calucluated, but the old index can be retrieved by using (N/(N - 1))*lambda. 